	PR c++/37561 	* c-typeck.c (build_unary_op): Don't call get_unwidened.  Use 	argtype instead of result_type.

* typeck.c (cp_build_unary_op): Don't call get_unwidened.  Use
	argtype instead of result_type.

	* gcc.dg/pr37561.c: New test.
	* g++.dg/other/increment1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141881 138bc75d-0d04-0410-961f-82ee72b054a4